<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/flight2"
    tools:context=".AddFlightActivity"
    >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_marginTop="5dp"
     >

    <EditText
        android:id="@+id/name"
        android:hint="Airline Name"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/num"
        android:hint="Flight Number"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/source"
        android:hint="Source Location"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/destination"
        android:hint="Destination Location"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/departure"
        android:hint="Departure time"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/arrival"
        android:hint="Arrival time"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:inputType="text"
        />
    
    <Button
        android:id="@+id/save"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="Save"
        android:textSize="20dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        />

</LinearLayout>
</ScrollView>