<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/flight1"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Welcome To \n Airline Application!"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <Button
        android:id="@+id/add"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:onClick="launchAddFlight"
        android:paddingLeft="4dp"
        android:paddingTop="5dp"
        android:paddingRight="4dp"
        android:paddingBottom="5dp"
        android:text="@string/AddFlight"
        android:textColor="@android:color/white"
        android:textFontWeight="@android:integer/status_bar_notification_info_maxnum"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/search"
        app:layout_constraintTop_toTopOf="@+id/welcome"
        app:layout_constraintVertical_bias="0.68" />

    <Button
        android:id="@+id/search"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:onClick="launchSearch"
        android:paddingLeft="4dp"
        android:paddingTop="5dp"
        android:paddingRight="4dp"
        android:paddingBottom="5dp"
        android:text="@string/SearchFlight"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintLeft_toLeftOf="@+id/add"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcome"
        app:layout_constraintVertical_bias="0.68" />

    <Button
        android:id="@+id/help"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:onClick="launchReadMe"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/help"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search"
        app:layout_constraintVertical_bias="0.478" />

</androidx.constraintlayout.widget.ConstraintLayout>

