<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".ReadMeActivity">

    <WebView
        android:id="@+id/readMe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</RelativeLayout>
